--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/www.js",
-    "dev": "nodemon ./bin/www.js",
-    "format:check": "prettier --check .",
-    "format:write": "prettier --write .",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "dev": "nodemon ./bin/www.js"
   },
   "bin": {
     "backend": "bin/www.js"
@@ -40,10 +36,7 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "compression": "^1.7.4",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^3.0.0"
+    "compression": "^1.7.4"
   },
   "repository": {
     "type": "git",
